--- a/pack/dol.lcf.j2
+++ b/pack/dol.lcf.j2
@@ -45,6 +45,20 @@ FORCEFILES {
 }
 
 FORCEACTIVE {
+// ut_charWriter
+__ct__Q34nw4r2ut10CharWriterFv
+__dt__Q34nw4r2ut10CharWriterFv
+SetupGX__Q34nw4r2ut10CharWriterFv
+SetFontSize__Q34nw4r2ut10CharWriterFf
+SetFontSize__Q34nw4r2ut10CharWriterFff
+GetFontWidth__Q34nw4r2ut10CharWriterCFv
+GetFontHeight__Q34nw4r2ut10CharWriterCFv
+GetFontAscent__Q34nw4r2ut10CharWriterCFv
+Print__Q34nw4r2ut10CharWriterFUs
+PrintGlyph__Q34nw4r2ut10CharWriterFfffRCQ34nw4r2ut5Glyph
+UpdateVertexColor__Q34nw4r2ut10CharWriterFv
+SetupGXWithColorMapping__Q34nw4r2ut10CharWriterFQ34nw4r2ut5ColorQ34nw4r2ut5Color
+
 // gsAvailable
 GSIStartAvailableCheckA
 //GSIAvailableCheckThink
